--- a/css/utilities.css
+++ b/css/utilities.css
@@ -34,7 +34,53 @@
   transform: scale(0.98);
 }
 
-.text-center{
+/* Backgorunds & colored buttons */
+.bg-primary,
+.btn-primary {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+.bg-secondary,
+.btn-secondary {
+  background-color: var(--secondary-color);
+  color: #fff;
+}
+
+.bg-dark,
+.btn-dark {
+  background-color: var(--dark-color);
+  color: #fff;
+}
+
+.bg-light,
+.btn-light {
+  background-color: var(--light-color);
+  color: #333;
+}
+
+/* Text sizes */
+.lead {
+  font-size: 20px;
+}
+
+.sm {
+  font-size: 1rem;
+}
+
+.md {
+  font-size: 2rem;
+}
+
+.lg {
+  font-size: 3rem;
+}
+
+.xl {
+  font-size: 4rem;
+}
+
+.text-center {
   text-align: center;
 }
 
@@ -59,83 +105,83 @@
 }
 
 /* Margin */
-.my-1{
+.my-1 {
   margin: 1rem 0;
 }
 
-.my-2{
+.my-2 {
   margin: 1.5rem 0;
 }
 
-.my-3{
+.my-3 {
   margin: 2rem 0;
 }
 
-.my-4{
+.my-4 {
   margin: 3rem 0;
 }
 
-.my-5{
+.my-5 {
   margin: 4rem 0;
 }
 
-.m-1{
+.m-1 {
   margin: 1rem;
 }
 
-.m-2{
+.m-2 {
   margin: 1.5rem;
 }
 
-.m-3{
+.m-3 {
   margin: 2rem;
 }
 
-.m-4{
+.m-4 {
   margin: 3rem;
 }
 
-.m-5{
+.m-5 {
   margin: 4rem;
 }
 
 /* Padding */
-.py-1{
+.py-1 {
   padding: 1rem 0;
 }
 
-.py-2{
+.py-2 {
   padding: 1.5rem 0;
 }
 
-.py-3{
+.py-3 {
   padding: 2rem 0;
 }
 
-.py-4{
+.py-4 {
   padding: 3rem 0;
 }
 
-.py-5{
+.py-5 {
   padding: 4rem 0;
 }
 
-.p-1{
+.p-1 {
   padding: 1rem;
 }
 
-.p-2{
+.p-2 {
   padding: 1.5rem;
 }
 
-.p-3{
+.p-3 {
   padding: 2rem;
 }
 
-.p-4{
+.p-4 {
   padding: 3rem;
 }
 
-.p-5{
+.p-5 {
   padding: 4rem;
 }
